# cooplan-definition-consumer

./: .gitignore  Cargo.toml  api_consumer.json  config.json
.github/workflows/: integration.yml  release.yml
src/: error.rs  lib.rs
src/config/: consumer_config.rs  mod.rs
src/logic/: storage_request.rs
src/logic/actions/: definition_storage_action.rs
src/storage/: definition_provider_consumer.rs  definition_request_dispatch.rs  init.rs  mod.rs
src/storage/elements/: amqp_definition.rs  mod.rs
tests/storage/elements/: amqp_definition_test.rs  mod.rs
