[package]
name = "cooplan-definition-provider-api-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooplan-definitions-lib = "0.1.6"
cooplan-lapin-wrapper = "0.4.2"
cooplan-auth = "0.1.3"
cooplan-state-tracker = "0.1.5"

# JSON Serialization
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-channel = "1.8.0"
async-recursion = "1.0"

# Logging
log = "0.4.17"

# RabbitMQ
lapin = "2.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]