[package]
name = "cooplan-definition-consumer"
version = "0.1.0"
edition = "2021"
description = "Library for easily making usage of cooplan definition provider's API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooplan-definitions-lib = "0.1.6"
cooplan-lapin-wrapper = "0.5.0"
cooplan-auth = "0.1.4"
cooplan-state-tracker = "0.1.5"
cooplan-amqp-api-consumer = "0.2.0"
cooplan-amqp-api-shared = "0.1.0"

# JSON Serialization
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-channel = "1.8.0"
async-recursion = "1.0"
futures-util = "0.3.25"

# Logging
log = "0.4.17"

# RabbitMQ
lapin = "2.1"

# UUID
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
